Fixed bug with about and contact

--- a/contact.html
+++ b/contact.html
@@ -14,18 +14,16 @@
   
   <body id = "top">
     <header>
-      
-      <h1>Pantheon</h1>
-      <h2>League Of Legends contestant/Part-time baker</h2>
+      <h1>Name</h1>
+      <h2>Generic Job Name</h2>
       <div class = "menu">
         <nav class="navbar navbar-inverse">
           <div class = "container">
-          <ul>
-            <a href = "index.html" class = "selected">Main</a>
-            <a href = "blog.html">Blog</a>
-            <a href = "about.html">About</a>
-            <a href = "contact.html">Contact</a>
-          </ul>
+            <ul>
+              <a href = "index.html">Main</a>
+              <a href = "about.html">About</a>
+              <a href = "contact.html" class = "selected">Contact</a>
+            </ul>
           </div>
         </nav>
       </div>  
